# TheUnchartedForest

./: CMakeLists.txt
include/: camera.h  console.h  consolelogger.h  gui.h  guibar.h  guielement.h  material.h  mesh.h  sdffont.h  shader.h  shadermanager.h  texture.h  tuf.h  utils.h
include/smd/: smdloader.h
resources/fonts/: Inconsolata.sdf
resources/mesh/: Torus.smd
resources/shader/: phong.frag  phong.vert  sdf.frag  sdf.vert
src/: camera.cpp  console.cpp  consolelogger.cpp  gui.cpp  guibar.cpp  guielement.cpp  main.cpp  mesh.cpp  sdffont.cpp  shader.cpp  shadermanager.cpp  texture.cpp  tuf.cpp  utils.cpp
src/smd/: smdloader.cpp
